Remove useless option from test target